BAU: call different makeRequest method overload
Just removing unnecessary lines